apps/folio/tests/snapshots/render__ansi_catppuccin-latte.snap
---
source: tests/render.rs
expression: "render::ansi(&page, theme, false)"
---
  [38;2;188;192;204m┌──────┬───────────────────────────┐[0m
  [38;2;188;192;204m│ [0m[1;38;2;46;48;71mkey[0m [38;2;188;192;204m │ [0m[1;38;2;46;48;71mvalue[0m                    [38;2;188;192;204m │[0m
  [38;2;188;192;204m├──────┼───────────────────────────┤[0m
  [38;2;188;192;204m│ [0m[38;2;76;79;105mtype[0m[38;2;188;192;204m │ [0m[38;2;76;79;105mguide[0m                    [38;2;188;192;204m │[0m
  [38;2;188;192;204m│ [0m[38;2;76;79;105mtags[0m[38;2;188;192;204m │ [0m[38;2;76;79;105m[backup, restic, homelab][0m[38;2;188;192;204m │[0m
  [38;2;188;192;204m└──────┴───────────────────────────┘[0m
  
  
  [1;38;2;46;48;71mBacking up the home server[0m
  [38;2;188;192;204m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;76;79;105mNightly snapshots go to a local disk first and to off-site storage once a week. The restore path[0m
  [38;2;76;79;105mis tested monthly, because a backup nobody has restored is a [0m[1;38;2;76;79;105mhope[0m[38;2;76;79;105m, not a plan. Everything below[0m
  [38;2;76;79;105massumes [0m[38;2;136;57;239mrestic[0m[38;2;76;79;105m 0.18 and the layout described in [0m[4;38;2;30;102;245mServer layout[0m[38;2;76;79;105m.[0m
  
  [1;38;2;46;48;71mWhat gets backed up[0m
  [38;2;188;192;204m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;140;143;161m• [0m[38;2;136;57;239m/srv/photos[0m[38;2;76;79;105m - the originals, about 400 GB and growing slowly[0m
  [38;2;140;143;161m• [0m[38;2;136;57;239m/srv/docs[0m[38;2;76;79;105m - scanned paper, tax records, manuals[0m
  [38;2;140;143;161m• [0m[38;2;76;79;105mContainer volumes, but only the ones that hold state:[0m
    [38;2;140;143;161m◦ [0m[38;2;76;79;105mthe wiki database[0m
    [38;2;140;143;161m◦ [0m[38;2;76;79;105mthe RSS reader[0m
  [38;2;140;143;161m• [0m[38;2;76;79;105mNothing under [0m[38;2;136;57;239m/srv/media[0m[38;2;76;79;105m - it is re-downloadable[0m
  
  [38;2;30;102;245m▌ [0m[38;2;30;102;245m󰋽 [0m[1;38;2;30;102;245mNote[0m
  [38;2;30;102;245m▌ [0m[38;2;76;79;105mThe photo library is the one thing here that cannot be recreated. Everything else is a[0m
  [38;2;30;102;245m▌ [0m[38;2;76;79;105mconvenience.[0m
  
  [1;38;2;46;48;71mSchedule[0m
  [38;2;188;192;204m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;188;192;204m┌────────────┬───────────────┬────────────────────┬───────────┐[0m
  [38;2;188;192;204m│ [0m[1;38;2;46;48;71mTarget[0m    [38;2;188;192;204m │ [0m[1;38;2;46;48;71mWhen[0m         [38;2;188;192;204m │ [0m[1;38;2;46;48;71mRetention[0m         [38;2;188;192;204m │ [0m[1;38;2;46;48;71mVerified[0m [38;2;188;192;204m │[0m
  [38;2;188;192;204m├────────────┼───────────────┼────────────────────┼───────────┤[0m
  [38;2;188;192;204m│ [0m[38;2;76;79;105mLocal disk[0m[38;2;188;192;204m │ [0m[38;2;76;79;105mnightly 02:00[0m[38;2;188;192;204m │ [0m[38;2;76;79;105m14 daily, 8 weekly[0m[38;2;188;192;204m │ [0m[38;2;76;79;105mmonthly[0m  [38;2;188;192;204m │[0m
  [38;2;188;192;204m│ [0m[38;2;76;79;105mOff-site[0m  [38;2;188;192;204m │ [0m[38;2;76;79;105mSunday 03:00[0m [38;2;188;192;204m │ [0m[38;2;76;79;105m12 monthly[0m        [38;2;188;192;204m │ [0m[38;2;76;79;105mquarterly[0m[38;2;188;192;204m │[0m
  [38;2;188;192;204m└────────────┴───────────────┴────────────────────┴───────────┘[0m
  
  [38;2;76;79;105mThe off-site job runs after the local one so a corrupt night never propagates¹[0m[38;2;76;79;105m.[0m
  
  [1;38;2;46;48;71mThe nightly job[0m
  
  [48;2;230;233;239m                                                                                                [0m
  [38;2;76;79;105;48;2;230;233;239m [0m[3;38;2;124;127;147;48;2;230;233;239m#[0m[3;38;2;124;127;147;48;2;230;233;239m!/usr/bin/env bash[0m[48;2;230;233;239m                                                                            [0m
  [38;2;76;79;105;48;2;230;233;239m [0m[3;38;2;124;127;147;48;2;230;233;239m#[0m[3;38;2;124;127;147;48;2;230;233;239m Snapshot the state directories, then prune to the retention policy.[0m[48;2;230;233;239m                          [0m
  [38;2;76;79;105;48;2;230;233;239m [0m[38;2;136;57;239;48;2;230;233;239mexport[0m[38;2;76;79;105;48;2;230;233;239m [0m[38;2;76;79;105;48;2;230;233;239mRESTIC_REPOSITORY[0m[38;2;23;146;153;48;2;230;233;239m=[0m[38;2;64;160;43;48;2;230;233;239m/mnt/backup/restic[0m[48;2;230;233;239m                                                    [0m
  [38;2;76;79;105;48;2;230;233;239m [0m[3;38;2;30;102;245;48;2;230;233;239mrestic[0m[38;2;76;79;105;48;2;230;233;239m backup /srv/photos /srv/docs[0m[38;2;124;127;147;48;2;230;233;239m --[0m[3;38;2;230;69;83;48;2;230;233;239mexclude-caches[0m[38;2;124;127;147;48;2;230;233;239m --[0m[3;38;2;230;69;83;48;2;230;233;239mtag[0m[38;2;76;79;105;48;2;230;233;239m nightly[0m[48;2;230;233;239m                             [0m
  [38;2;76;79;105;48;2;230;233;239m [0m[3;38;2;30;102;245;48;2;230;233;239mrestic[0m[38;2;76;79;105;48;2;230;233;239m forget[0m[38;2;124;127;147;48;2;230;233;239m --[0m[3;38;2;230;69;83;48;2;230;233;239mkeep-daily[0m[38;2;76;79;105;48;2;230;233;239m 14[0m[38;2;124;127;147;48;2;230;233;239m --[0m[3;38;2;230;69;83;48;2;230;233;239mkeep-weekly[0m[38;2;76;79;105;48;2;230;233;239m 8[0m[38;2;124;127;147;48;2;230;233;239m --[0m[3;38;2;230;69;83;48;2;230;233;239mprune[0m[48;2;230;233;239m                                          [0m
  [48;2;230;233;239m                                                                                                [0m
  
  [1;38;2;46;48;71mRestore drill[0m
  [38;2;188;192;204m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;64;160;43m󰄲 [0m[38;2;140;143;161mRestore one photo album to [0m[38;2;136;57;239m/tmp[0m[38;2;140;143;161m and open it[0m
  [38;2;64;160;43m󰄲 [0m[38;2;140;143;161mRestore the wiki database and start it against a scratch container[0m
  [38;2;140;143;161m󰄱 [0m[38;2;76;79;105mTime a full restore of [0m[38;2;136;57;239m/srv/docs[0m[38;2;76;79;105m from off-site[0m
  
  [38;2;140;143;161m▌ [0m[38;2;140;143;161mThe point of the drill is not confidence in the tool. It is confidence in the [0m[3;38;2;140;143;161mprocedure[0m[38;2;140;143;161m, which[0m
  [38;2;140;143;161m▌ [0m[38;2;140;143;161mis the part that rots.[0m
  
  [38;2;188;192;204m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  
  [38;2;76;79;105mRelated: [0m[4;38;2;30;102;245mDisk replacement[0m[38;2;76;79;105m · [0m[4;38;2;30;102;245mMonitoring[0m[38;2;76;79;105m · [0m[38;2;140;143;161m#homelab[0m
  
  [38;2;30;102;245m¹ [0m[38;2;140;143;161mA corrupt local snapshot still cannot reach off-site until the following Sunday, which is the[0m
    [38;2;140;143;161mwindow for noticing.[0m
