apps/folio/tests/snapshots/render__ansi_catppuccin-mocha.snap
---
source: tests/render.rs
expression: "render::ansi(&page, theme, false)"
---
  [38;2;69;71;90m┌──────┬───────────────────────────┐[0m
  [38;2;69;71;90m│ [0m[1;38;2;238;241;251mkey[0m [38;2;69;71;90m │ [0m[1;38;2;238;241;251mvalue[0m                    [38;2;69;71;90m │[0m
  [38;2;69;71;90m├──────┼───────────────────────────┤[0m
  [38;2;69;71;90m│ [0m[38;2;205;214;244mtype[0m[38;2;69;71;90m │ [0m[38;2;205;214;244mguide[0m                    [38;2;69;71;90m │[0m
  [38;2;69;71;90m│ [0m[38;2;205;214;244mtags[0m[38;2;69;71;90m │ [0m[38;2;205;214;244m[backup, restic, homelab][0m[38;2;69;71;90m │[0m
  [38;2;69;71;90m└──────┴───────────────────────────┘[0m
  
  
  [1;38;2;238;241;251mBacking up the home server[0m
  [38;2;69;71;90m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;205;214;244mNightly snapshots go to a local disk first and to off-site storage once a week. The restore path[0m
  [38;2;205;214;244mis tested monthly, because a backup nobody has restored is a [0m[1;38;2;205;214;244mhope[0m[38;2;205;214;244m, not a plan. Everything below[0m
  [38;2;205;214;244massumes [0m[38;2;203;166;247mrestic[0m[38;2;205;214;244m 0.18 and the layout described in [0m[4;38;2;137;180;250mServer layout[0m[38;2;205;214;244m.[0m
  
  [1;38;2;238;241;251mWhat gets backed up[0m
  [38;2;69;71;90m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;108;112;134m• [0m[38;2;203;166;247m/srv/photos[0m[38;2;205;214;244m - the originals, about 400 GB and growing slowly[0m
  [38;2;108;112;134m• [0m[38;2;203;166;247m/srv/docs[0m[38;2;205;214;244m - scanned paper, tax records, manuals[0m
  [38;2;108;112;134m• [0m[38;2;205;214;244mContainer volumes, but only the ones that hold state:[0m
    [38;2;108;112;134m◦ [0m[38;2;205;214;244mthe wiki database[0m
    [38;2;108;112;134m◦ [0m[38;2;205;214;244mthe RSS reader[0m
  [38;2;108;112;134m• [0m[38;2;205;214;244mNothing under [0m[38;2;203;166;247m/srv/media[0m[38;2;205;214;244m - it is re-downloadable[0m
  
  [38;2;137;180;250m▌ [0m[38;2;137;180;250m󰋽 [0m[1;38;2;137;180;250mNote[0m
  [38;2;137;180;250m▌ [0m[38;2;205;214;244mThe photo library is the one thing here that cannot be recreated. Everything else is a[0m
  [38;2;137;180;250m▌ [0m[38;2;205;214;244mconvenience.[0m
  
  [1;38;2;238;241;251mSchedule[0m
  [38;2;69;71;90m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;69;71;90m┌────────────┬───────────────┬────────────────────┬───────────┐[0m
  [38;2;69;71;90m│ [0m[1;38;2;238;241;251mTarget[0m    [38;2;69;71;90m │ [0m[1;38;2;238;241;251mWhen[0m         [38;2;69;71;90m │ [0m[1;38;2;238;241;251mRetention[0m         [38;2;69;71;90m │ [0m[1;38;2;238;241;251mVerified[0m [38;2;69;71;90m │[0m
  [38;2;69;71;90m├────────────┼───────────────┼────────────────────┼───────────┤[0m
  [38;2;69;71;90m│ [0m[38;2;205;214;244mLocal disk[0m[38;2;69;71;90m │ [0m[38;2;205;214;244mnightly 02:00[0m[38;2;69;71;90m │ [0m[38;2;205;214;244m14 daily, 8 weekly[0m[38;2;69;71;90m │ [0m[38;2;205;214;244mmonthly[0m  [38;2;69;71;90m │[0m
  [38;2;69;71;90m│ [0m[38;2;205;214;244mOff-site[0m  [38;2;69;71;90m │ [0m[38;2;205;214;244mSunday 03:00[0m [38;2;69;71;90m │ [0m[38;2;205;214;244m12 monthly[0m        [38;2;69;71;90m │ [0m[38;2;205;214;244mquarterly[0m[38;2;69;71;90m │[0m
  [38;2;69;71;90m└────────────┴───────────────┴────────────────────┴───────────┘[0m
  
  [38;2;205;214;244mThe off-site job runs after the local one so a corrupt night never propagates¹[0m[38;2;205;214;244m.[0m
  
  [1;38;2;238;241;251mThe nightly job[0m
  
  [48;2;24;24;37m                                                                                                [0m
  [38;2;205;214;244;48;2;24;24;37m [0m[3;38;2;147;153;178;48;2;24;24;37m#[0m[3;38;2;147;153;178;48;2;24;24;37m!/usr/bin/env bash[0m[48;2;24;24;37m                                                                            [0m
  [38;2;205;214;244;48;2;24;24;37m [0m[3;38;2;147;153;178;48;2;24;24;37m#[0m[3;38;2;147;153;178;48;2;24;24;37m Snapshot the state directories, then prune to the retention policy.[0m[48;2;24;24;37m                          [0m
  [38;2;205;214;244;48;2;24;24;37m [0m[38;2;203;166;247;48;2;24;24;37mexport[0m[38;2;205;214;244;48;2;24;24;37m [0m[38;2;205;214;244;48;2;24;24;37mRESTIC_REPOSITORY[0m[38;2;148;226;213;48;2;24;24;37m=[0m[38;2;166;227;161;48;2;24;24;37m/mnt/backup/restic[0m[48;2;24;24;37m                                                    [0m
  [38;2;205;214;244;48;2;24;24;37m [0m[3;38;2;137;180;250;48;2;24;24;37mrestic[0m[38;2;205;214;244;48;2;24;24;37m backup /srv/photos /srv/docs[0m[38;2;147;153;178;48;2;24;24;37m --[0m[3;38;2;235;160;172;48;2;24;24;37mexclude-caches[0m[38;2;147;153;178;48;2;24;24;37m --[0m[3;38;2;235;160;172;48;2;24;24;37mtag[0m[38;2;205;214;244;48;2;24;24;37m nightly[0m[48;2;24;24;37m                             [0m
  [38;2;205;214;244;48;2;24;24;37m [0m[3;38;2;137;180;250;48;2;24;24;37mrestic[0m[38;2;205;214;244;48;2;24;24;37m forget[0m[38;2;147;153;178;48;2;24;24;37m --[0m[3;38;2;235;160;172;48;2;24;24;37mkeep-daily[0m[38;2;205;214;244;48;2;24;24;37m 14[0m[38;2;147;153;178;48;2;24;24;37m --[0m[3;38;2;235;160;172;48;2;24;24;37mkeep-weekly[0m[38;2;205;214;244;48;2;24;24;37m 8[0m[38;2;147;153;178;48;2;24;24;37m --[0m[3;38;2;235;160;172;48;2;24;24;37mprune[0m[48;2;24;24;37m                                          [0m
  [48;2;24;24;37m                                                                                                [0m
  
  [1;38;2;238;241;251mRestore drill[0m
  [38;2;69;71;90m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;166;227;161m󰄲 [0m[38;2;108;112;134mRestore one photo album to [0m[38;2;203;166;247m/tmp[0m[38;2;108;112;134m and open it[0m
  [38;2;166;227;161m󰄲 [0m[38;2;108;112;134mRestore the wiki database and start it against a scratch container[0m
  [38;2;108;112;134m󰄱 [0m[38;2;205;214;244mTime a full restore of [0m[38;2;203;166;247m/srv/docs[0m[38;2;205;214;244m from off-site[0m
  
  [38;2;108;112;134m▌ [0m[38;2;108;112;134mThe point of the drill is not confidence in the tool. It is confidence in the [0m[3;38;2;108;112;134mprocedure[0m[38;2;108;112;134m, which[0m
  [38;2;108;112;134m▌ [0m[38;2;108;112;134mis the part that rots.[0m
  
  [38;2;69;71;90m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  
  [38;2;205;214;244mRelated: [0m[4;38;2;137;180;250mDisk replacement[0m[38;2;205;214;244m · [0m[4;38;2;137;180;250mMonitoring[0m[38;2;205;214;244m · [0m[38;2;108;112;134m#homelab[0m
  
  [38;2;137;180;250m¹ [0m[38;2;108;112;134mA corrupt local snapshot still cannot reach off-site until the following Sunday, which is the[0m
    [38;2;108;112;134mwindow for noticing.[0m
