apps/folio/tests/snapshots/render__ansi_solarized-dark.snap
---
source: tests/render.rs
expression: "render::ansi(&page, theme, false)"
---
  [38;2;12;58;70m┌──────┬───────────────────────────┐[0m
  [38;2;12;58;70m│ [0m[1;38;2;147;161;161mkey[0m [38;2;12;58;70m │ [0m[1;38;2;147;161;161mvalue[0m                    [38;2;12;58;70m │[0m
  [38;2;12;58;70m├──────┼───────────────────────────┤[0m
  [38;2;12;58;70m│ [0m[38;2;131;148;150mtype[0m[38;2;12;58;70m │ [0m[38;2;131;148;150mguide[0m                    [38;2;12;58;70m │[0m
  [38;2;12;58;70m│ [0m[38;2;131;148;150mtags[0m[38;2;12;58;70m │ [0m[38;2;131;148;150m[backup, restic, homelab][0m[38;2;12;58;70m │[0m
  [38;2;12;58;70m└──────┴───────────────────────────┘[0m
  
  
  [1;38;2;147;161;161mBacking up the home server[0m
  [38;2;12;58;70m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;131;148;150mNightly snapshots go to a local disk first and to off-site storage once a week. The restore path[0m
  [38;2;131;148;150mis tested monthly, because a backup nobody has restored is a [0m[1;38;2;131;148;150mhope[0m[38;2;131;148;150m, not a plan. Everything below[0m
  [38;2;131;148;150massumes [0m[38;2;108;113;196mrestic[0m[38;2;131;148;150m 0.18 and the layout described in [0m[4;38;2;38;139;210mServer layout[0m[38;2;131;148;150m.[0m
  
  [1;38;2;147;161;161mWhat gets backed up[0m
  [38;2;12;58;70m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;88;110;117m• [0m[38;2;108;113;196m/srv/photos[0m[38;2;131;148;150m - the originals, about 400 GB and growing slowly[0m
  [38;2;88;110;117m• [0m[38;2;108;113;196m/srv/docs[0m[38;2;131;148;150m - scanned paper, tax records, manuals[0m
  [38;2;88;110;117m• [0m[38;2;131;148;150mContainer volumes, but only the ones that hold state:[0m
    [38;2;88;110;117m◦ [0m[38;2;131;148;150mthe wiki database[0m
    [38;2;88;110;117m◦ [0m[38;2;131;148;150mthe RSS reader[0m
  [38;2;88;110;117m• [0m[38;2;131;148;150mNothing under [0m[38;2;108;113;196m/srv/media[0m[38;2;131;148;150m - it is re-downloadable[0m
  
  [38;2;38;139;210m▌ [0m[38;2;38;139;210m󰋽 [0m[1;38;2;38;139;210mNote[0m
  [38;2;38;139;210m▌ [0m[38;2;131;148;150mThe photo library is the one thing here that cannot be recreated. Everything else is a[0m
  [38;2;38;139;210m▌ [0m[38;2;131;148;150mconvenience.[0m
  
  [1;38;2;147;161;161mSchedule[0m
  [38;2;12;58;70m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;12;58;70m┌────────────┬───────────────┬────────────────────┬───────────┐[0m
  [38;2;12;58;70m│ [0m[1;38;2;147;161;161mTarget[0m    [38;2;12;58;70m │ [0m[1;38;2;147;161;161mWhen[0m         [38;2;12;58;70m │ [0m[1;38;2;147;161;161mRetention[0m         [38;2;12;58;70m │ [0m[1;38;2;147;161;161mVerified[0m [38;2;12;58;70m │[0m
  [38;2;12;58;70m├────────────┼───────────────┼────────────────────┼───────────┤[0m
  [38;2;12;58;70m│ [0m[38;2;131;148;150mLocal disk[0m[38;2;12;58;70m │ [0m[38;2;131;148;150mnightly 02:00[0m[38;2;12;58;70m │ [0m[38;2;131;148;150m14 daily, 8 weekly[0m[38;2;12;58;70m │ [0m[38;2;131;148;150mmonthly[0m  [38;2;12;58;70m │[0m
  [38;2;12;58;70m│ [0m[38;2;131;148;150mOff-site[0m  [38;2;12;58;70m │ [0m[38;2;131;148;150mSunday 03:00[0m [38;2;12;58;70m │ [0m[38;2;131;148;150m12 monthly[0m        [38;2;12;58;70m │ [0m[38;2;131;148;150mquarterly[0m[38;2;12;58;70m │[0m
  [38;2;12;58;70m└────────────┴───────────────┴────────────────────┴───────────┘[0m
  
  [38;2;131;148;150mThe off-site job runs after the local one so a corrupt night never propagates¹[0m[38;2;131;148;150m.[0m
  
  [1;38;2;147;161;161mThe nightly job[0m
  
  [48;2;7;54;66m                                                                                                [0m
  [38;2;131;148;150;48;2;7;54;66m [0m[38;2;88;110;117;48;2;7;54;66m#[0m[38;2;88;110;117;48;2;7;54;66m!/usr/bin/env bash[0m[48;2;7;54;66m                                                                            [0m
  [38;2;131;148;150;48;2;7;54;66m [0m[38;2;88;110;117;48;2;7;54;66m#[0m[38;2;88;110;117;48;2;7;54;66m Snapshot the state directories, then prune to the retention policy.[0m[48;2;7;54;66m                          [0m
  [38;2;131;148;150;48;2;7;54;66m [0m[38;2;147;161;161;48;2;7;54;66mexport[0m[38;2;131;148;150;48;2;7;54;66m [0m[38;2;38;139;210;48;2;7;54;66mRESTIC_REPOSITORY[0m[38;2;101;123;131;48;2;7;54;66m=[0m[38;2;42;161;152;48;2;7;54;66m/mnt/backup/restic[0m[48;2;7;54;66m                                                    [0m
  [38;2;131;148;150;48;2;7;54;66m [0m[38;2;181;137;0;48;2;7;54;66mrestic[0m[38;2;131;148;150;48;2;7;54;66m backup /srv/photos /srv/docs[0m[38;2;38;139;210;48;2;7;54;66m --[0m[38;2;38;139;210;48;2;7;54;66mexclude-caches[0m[38;2;38;139;210;48;2;7;54;66m --[0m[38;2;38;139;210;48;2;7;54;66mtag[0m[38;2;131;148;150;48;2;7;54;66m nightly[0m[48;2;7;54;66m                             [0m
  [38;2;131;148;150;48;2;7;54;66m [0m[38;2;181;137;0;48;2;7;54;66mrestic[0m[38;2;131;148;150;48;2;7;54;66m forget[0m[38;2;38;139;210;48;2;7;54;66m --[0m[38;2;38;139;210;48;2;7;54;66mkeep-daily[0m[38;2;131;148;150;48;2;7;54;66m 14[0m[38;2;38;139;210;48;2;7;54;66m --[0m[38;2;38;139;210;48;2;7;54;66mkeep-weekly[0m[38;2;131;148;150;48;2;7;54;66m 8[0m[38;2;38;139;210;48;2;7;54;66m --[0m[38;2;38;139;210;48;2;7;54;66mprune[0m[48;2;7;54;66m                                          [0m
  [48;2;7;54;66m                                                                                                [0m
  
  [1;38;2;147;161;161mRestore drill[0m
  [38;2;12;58;70m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;133;153;0m󰄲 [0m[38;2;88;110;117mRestore one photo album to [0m[38;2;108;113;196m/tmp[0m[38;2;88;110;117m and open it[0m
  [38;2;133;153;0m󰄲 [0m[38;2;88;110;117mRestore the wiki database and start it against a scratch container[0m
  [38;2;88;110;117m󰄱 [0m[38;2;131;148;150mTime a full restore of [0m[38;2;108;113;196m/srv/docs[0m[38;2;131;148;150m from off-site[0m
  
  [38;2;88;110;117m▌ [0m[38;2;88;110;117mThe point of the drill is not confidence in the tool. It is confidence in the [0m[3;38;2;88;110;117mprocedure[0m[38;2;88;110;117m, which[0m
  [38;2;88;110;117m▌ [0m[38;2;88;110;117mis the part that rots.[0m
  
  [38;2;12;58;70m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  
  [38;2;131;148;150mRelated: [0m[4;38;2;38;139;210mDisk replacement[0m[38;2;131;148;150m · [0m[4;38;2;38;139;210mMonitoring[0m[38;2;131;148;150m · [0m[38;2;88;110;117m#homelab[0m
  
  [38;2;38;139;210m¹ [0m[38;2;88;110;117mA corrupt local snapshot still cannot reach off-site until the following Sunday, which is the[0m
    [38;2;88;110;117mwindow for noticing.[0m
