apps/folio/tests/snapshots/render__github_ansi_carries_theme_colours_and_links.snap
---
source: tests/render.rs
expression: out
---
  [38;2;202;191;158m┌──────┬───────────────────────────┐[0m
  [38;2;202;191;158m│ [0m[1;38;2;88;110;117mkey[0m [38;2;202;191;158m │ [0m[1;38;2;88;110;117mvalue[0m                    [38;2;202;191;158m │[0m
  [38;2;202;191;158m├──────┼───────────────────────────┤[0m
  [38;2;202;191;158m│ [0m[38;2;101;123;131mtype[0m[38;2;202;191;158m │ [0m[38;2;101;123;131mguide[0m                    [38;2;202;191;158m │[0m
  [38;2;202;191;158m│ [0m[38;2;101;123;131mtags[0m[38;2;202;191;158m │ [0m[38;2;101;123;131m[backup, restic, homelab][0m[38;2;202;191;158m │[0m
  [38;2;202;191;158m└──────┴───────────────────────────┘[0m
  
  
  [1;38;2;88;110;117mBacking up the home server[0m
  [38;2;202;191;158m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;101;123;131mNightly snapshots go to a local disk first and to off-site storage once a week. The restore path[0m
  [38;2;101;123;131mis tested monthly, because a backup nobody has restored is a [0m[1;38;2;101;123;131mhope[0m[38;2;101;123;131m, not a plan. Everything below[0m
  [38;2;101;123;131massumes [0m[38;2;108;113;196mrestic[0m[38;2;101;123;131m 0.18 and the layout described in [0m[4;38;2;38;139;210mServer[0m[4;38;2;38;139;210m [0m[4;38;2;38;139;210mlayout[0m[38;2;101;123;131m.[0m
  
  [1;38;2;88;110;117mWhat gets backed up[0m
  [38;2;202;191;158m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;147;161;161m• [0m[38;2;108;113;196m/srv/photos[0m[38;2;101;123;131m - the originals, about 400 GB and growing slowly[0m
  [38;2;147;161;161m• [0m[38;2;108;113;196m/srv/docs[0m[38;2;101;123;131m - scanned paper, tax records, manuals[0m
  [38;2;147;161;161m• [0m[38;2;101;123;131mContainer volumes, but only the ones that hold state:[0m
    [38;2;147;161;161m◦ [0m[38;2;101;123;131mthe wiki database[0m
    [38;2;147;161;161m◦ [0m[38;2;101;123;131mthe RSS reader[0m
  [38;2;147;161;161m• [0m[38;2;101;123;131mNothing under [0m[38;2;108;113;196m/srv/media[0m[38;2;101;123;131m - it is re-downloadable[0m
  
  [38;2;38;139;210m▌ [0m[38;2;38;139;210mⓘ [0m[1;38;2;38;139;210mNote[0m
  [38;2;38;139;210m▌ [0m[38;2;101;123;131mThe photo library is the one thing here that cannot be recreated. Everything else is a[0m
  [38;2;38;139;210m▌ [0m[38;2;101;123;131mconvenience.[0m
  
  [1;38;2;88;110;117mSchedule[0m
  [38;2;202;191;158m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;202;191;158m┌────────────┬───────────────┬────────────────────┬───────────┐[0m
  [38;2;202;191;158m│ [0m[1;38;2;88;110;117mTarget[0m    [38;2;202;191;158m │ [0m[1;38;2;88;110;117mWhen[0m         [38;2;202;191;158m │ [0m[1;38;2;88;110;117mRetention[0m         [38;2;202;191;158m │ [0m[1;38;2;88;110;117mVerified[0m [38;2;202;191;158m │[0m
  [38;2;202;191;158m├────────────┼───────────────┼────────────────────┼───────────┤[0m
  [38;2;202;191;158m│ [0m[38;2;101;123;131mLocal disk[0m[38;2;202;191;158m │ [0m[38;2;101;123;131mnightly 02:00[0m[38;2;202;191;158m │ [0m[38;2;101;123;131m14 daily, 8 weekly[0m[38;2;202;191;158m │ [0m[38;2;101;123;131mmonthly[0m  [38;2;202;191;158m │[0m
  [38;2;202;191;158m│ [0m[38;2;101;123;131mOff-site[0m  [38;2;202;191;158m │ [0m[38;2;101;123;131mSunday 03:00[0m [38;2;202;191;158m │ [0m[38;2;101;123;131m12 monthly[0m        [38;2;202;191;158m │ [0m[38;2;101;123;131mquarterly[0m[38;2;202;191;158m │[0m
  [38;2;202;191;158m└────────────┴───────────────┴────────────────────┴───────────┘[0m
  
  [38;2;101;123;131mThe off-site job runs after the local one so a corrupt night never propagates¹[0m[38;2;101;123;131m.[0m
  
  [1;38;2;88;110;117mThe nightly job[0m
  
  [48;2;238;232;213m                                                                                                [0m
  [38;2;101;123;131;48;2;238;232;213m [0m[38;2;101;123;131;48;2;238;232;213m#!/usr/bin/env bash[0m[48;2;238;232;213m                                                                            [0m
  [38;2;101;123;131;48;2;238;232;213m [0m[38;2;101;123;131;48;2;238;232;213m# Snapshot the state directories, then prune to the retention policy.[0m[48;2;238;232;213m                          [0m
  [38;2;101;123;131;48;2;238;232;213m [0m[38;2;101;123;131;48;2;238;232;213mexport RESTIC_REPOSITORY=/mnt/backup/restic[0m[48;2;238;232;213m                                                    [0m
  [38;2;101;123;131;48;2;238;232;213m [0m[38;2;101;123;131;48;2;238;232;213mrestic backup /srv/photos /srv/docs --exclude-caches --tag nightly[0m[48;2;238;232;213m                             [0m
  [38;2;101;123;131;48;2;238;232;213m [0m[38;2;101;123;131;48;2;238;232;213mrestic forget --keep-daily 14 --keep-weekly 8 --prune[0m[48;2;238;232;213m                                          [0m
  [48;2;238;232;213m                                                                                                [0m
  
  [1;38;2;88;110;117mRestore drill[0m
  [38;2;202;191;158m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  [38;2;133;153;0m☒ [0m[38;2;147;161;161mRestore one photo album to [0m[38;2;108;113;196m/tmp[0m[38;2;147;161;161m and open it[0m
  [38;2;133;153;0m☒ [0m[38;2;147;161;161mRestore the wiki database and start it against a scratch container[0m
  [38;2;147;161;161m☐ [0m[38;2;101;123;131mTime a full restore of [0m[38;2;108;113;196m/srv/docs[0m[38;2;101;123;131m from off-site[0m
  
  [38;2;147;161;161m▌ [0m[38;2;147;161;161mThe point of the drill is not confidence in the tool. It is confidence in the [0m[3;38;2;147;161;161mprocedure[0m[38;2;147;161;161m, which[0m
  [38;2;147;161;161m▌ [0m[38;2;147;161;161mis the part that rots.[0m
  
  [38;2;202;191;158m────────────────────────────────────────────────────────────────────────────────────────────────[0m
  
  [38;2;101;123;131mRelated: [0m[4;38;2;38;139;210mDisk[0m[4;38;2;38;139;210m [0m[4;38;2;38;139;210mreplacement[0m[38;2;101;123;131m · [0m[4;38;2;38;139;210mMonitoring[0m[38;2;101;123;131m · [0m[38;2;147;161;161m#homelab[0m
  
  [38;2;38;139;210m¹ [0m[38;2;147;161;161mA corrupt local snapshot still cannot reach off-site until the following Sunday, which is the[0m
    [38;2;147;161;161mwindow for noticing.[0m
